# alpaca_zorro_plugin

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  alpaca_zorro_plugin.sln
.github/: FUNDING.yml
alpaca_zorro_plugin/: AlpacaBrokerCommands.h  AlpacaZorroPlugin.cpp  AlpacaZorroPlugin.h  SettingsDialog.cpp  SettingsDialog.h  alpaca_zorro_plugin.aps  alpaca_zorro_plugin.rc  alpaca_zorro_plugin.vcxproj  alpaca_zorro_plugin.vcxproj.filters  config.h  dllmain.cpp  global.h  logger.h  request.h  resource.h  stdafx.cpp  stdafx.h  throttler.h  trade.h  version.h.in
alpaca_zorro_plugin/alpaca/: account.cpp  account.h  asset.cpp  asset.h  balance.h  bars.cpp  bars.h  client.cpp  client.h  client_order_id_generator.h  clock.cpp  clock.h  crypto_asset.h  json.h  logger.h  option_contract.h  order.cpp  order.h  position.h  quote.h  response.h
alpaca_zorro_plugin/market_data/: alpaca_market_data.cpp  alpaca_market_data.h  bars.h  crypto_market_data.h  market_data.cpp  market_data.h  market_data_base.h  option_market_data.h  polygon.cpp  polygon.h  quote.h  snapshot.h  stock_market_data.h  trade.h
alpaca_zorro_plugin/websockets/: alpaca_md_ws.h  websockets.h
alpaca_zorro_plugin/zorro/include/: candle.c  com.h  contract.c  d3d9.h  default.c  func_list.h  functions.h  indicators.c  legacy.h  litec.h  opengl.h  profile.c  r.h  stdio.h  ta.h  trading.h  variables.h  windows.h  zorro.h
resources/: resource.h  resources.rc.in  version.rc.in
